Disable eap md5 for netgear 802.1x support

--- a/docs/PacketFence_Network_Devices_Configuration_Guide.asciidoc
+++ b/docs/PacketFence_Network_Devices_Configuration_Guide.asciidoc
@@ -3717,6 +3717,7 @@ M Series
 ^^^^^^^^
 
 PacketFence supports the Netgear M series in wired 802.1X and MAC authentication bypass without VoIP.
+On the PacketFence side you need to disable EAP MD5 support (Configuration -> System config -> Authentication Methods)
 
 Switch configuration
 ++++++++++++++++++++
