--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -26,6 +26,7 @@ Enhancements
 * Move ReAssignVlan and desAssociate api calls to the priority queue
 * Add Connection Profile SSID filter suggestions based on all the previous SSIDs that have been seen in the locationlog (#2758) (PR #2771).
 * Adds a description to the switches in the Nodes side navigation (#2791) (PR #2795).
+* Improve configuration of the captive portal timer bar (via the captive_portal section of pf.conf) (#383) (PR #2762)
 * (AD Powershell scripts) Enforce use of TLS in the powershell scripts which is required with the last versions of PF (PR #2788)
 * (AD Powershell scripts) Cycle through all the possible Active Directory usernames formats in PacketFence (PR #2788)
 
