--- a/conf/locale/en/LC_MESSAGES/packetfence.po
+++ b/conf/locale/en/LC_MESSAGES/packetfence.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 7.1.0\n"
+"Project-Id-Version: 7.3.0\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-06-14 14:37-0400\n"
+"PO-Revision-Date: 2017-11-24 10:24-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -14,6 +14,30 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with bandwidth balance : %s,"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with time balance : %s,"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with unregistration date : %s,"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Email.pm
+msgid "%s: Email activation required"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Sponsor.pm
+msgid "%s: Guest access request"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "%s: Guest access request accepted"
+msgstr ""
 
 # html/captive-portal/templates/pki_provider/packetfence_local.html
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
@@ -158,6 +182,7 @@ msgstr ""
 msgid "Confirm your password"
 msgstr ""
 
+# html/captive-portal/templates/billing/confirm_Stripe.html
 # html/captive-portal/templates/challenge.html
 # html/captive-portal/templates/message.html
 # html/captive-portal/templates/provisioner/accept.html
@@ -168,6 +193,7 @@ msgstr ""
 # html/captive-portal/templates/provisioner/opswat.html
 # html/captive-portal/templates/provisioner/sentinelone.html
 # html/captive-portal/templates/provisioner/sepm.html
+# html/captive-portal/templates/provisioner/servicenow.html
 # html/captive-portal/templates/provisioner/symantec.html
 # html/captive-portal/templates/provisioner/windows.html
 # html/captive-portal/templates/signin.html
@@ -221,6 +247,10 @@ msgstr ""
 
 # pf::person::FIELDS
 msgid "Custom_field_9"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
+msgid "Date Of Birth"
 msgstr ""
 
 # html/captive-portal/templates/status.html
@@ -300,6 +330,7 @@ msgstr ""
 msgid "Firstname"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # pf::person::FIELDS
 msgid "Gender"
 msgstr ""
@@ -361,6 +392,10 @@ msgstr ""
 msgid "I don't have a PIN"
 msgstr ""
 
+# lib/pf/web.pm
+msgid "IP"
+msgstr ""
+
 # html/captive-portal/templates/provisioner/mobileiron.html
 msgid "If you are using a Windows phone"
 msgstr ""
@@ -385,6 +420,7 @@ msgid "If you have any questions regarding the registration process please conta
 msgstr ""
 
 # html/captive-portal/templates/release.html
+# html/captive-portal/templates/scan-in-progress.html
 # html/captive-portal/templates/scan.html
 # html/captive-portal/templates/waiting.html
 msgid "If you have scripting turned off, you will not be automatically redirected. Please enable scripting or open a new browser window from time to time to see if your access was enabled."
@@ -462,7 +498,7 @@ msgid "Network access activation"
 msgstr ""
 
 # html/captive-portal/templates/release.html
-# html/captive-portal/templates/waiting.html
+# html/captive-portal/templates/scan-in-progress.html
 msgid "Network access has been granted"
 msgstr ""
 
@@ -511,6 +547,10 @@ msgstr ""
 
 # html/captive-portal/templates/provisioner/sepm.html
 msgid "Once the application is installed, click next to activate your network connection"
+msgstr ""
+
+# html/captive-portal/templates/provisioner/servicenow.html
+msgid "Once the verification is done, click 'Continue' to activate your network connection"
 msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
@@ -618,6 +658,10 @@ msgstr ""
 msgid "Restart registration process"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid "Role %s has been assigned to your device"
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Room_number"
 msgstr ""
@@ -632,12 +676,6 @@ msgstr ""
 
 # html/captive-portal/templates/content-with-choice.html
 msgid "Select an authentication method"
-msgstr ""
-
-# html/captive-portal/templates/release.html
-# html/captive-portal/templates/scan-in-progress.html
-# html/captive-portal/templates/waiting.html
-msgid "Some versions of Internet Explorer may take a while before redirection occur."
 msgstr ""
 
 # pf::person::FIELDS
@@ -749,6 +787,10 @@ msgstr ""
 
 # pf::person::FIELDS
 msgid "Title"
+msgstr ""
+
+# html/captive-portal/templates/provisioner/servicenow.html
+msgid "To complete your network activation we need to verify this is a corporate computer."
 msgstr ""
 
 # html/captive-portal/templates/provisioner/mobileiron.html
@@ -916,6 +958,10 @@ msgstr ""
 msgid "Your subscribtion was cancelled."
 msgstr ""
 
+# lib/pf/web.pm
+msgid "automatically refresh"
+msgstr ""
+
 # pf::web::constants (Locales)
 msgid "de_DE"
 msgstr "Deutsch"
@@ -987,6 +1033,10 @@ msgstr "You may have to re-open your browser to get Internet access. If you are 
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "requested guest access to your network."
+msgstr ""
+
+# lib/pf/web.pm
+msgid "scan in progress contact support if too long"
 msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Remediation.pm
