--- a/conf/locale/nl/LC_MESSAGES/packetfence.po
+++ b/conf/locale/nl/LC_MESSAGES/packetfence.po
@@ -12,14 +12,44 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-09-23 18:05+0000\n"
-"Last-Translator: Jan Colpaert <infradom@belgadom.org>\n"
+"PO-Revision-Date: 2017-11-24 15:31+0000\n"
+"Last-Translator: inverse <info@inverse.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/inverse/packetfence/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with bandwidth balance : %s,"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with time balance : %s,"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with unregistration date : %s,"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Email.pm
+msgid "%s: Email activation required"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Sponsor.pm
+msgid "%s: Guest access request"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "%s: Guest access request accepted"
+msgstr ""
 
 # html/captive-portal/templates/pki_provider/packetfence_local.html
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
@@ -91,6 +121,11 @@ msgstr "In de komende minuten wordt een email verstuurd die de login informatie 
 msgid "An error occured"
 msgstr "Er is een fout opgetreden"
 
+# html/captive-portal/templates/lost_stolen.html
+msgid ""
+"An error occured while trying to declare the device %s as lost or stolen."
+msgstr ""
+
 # html/captive-
 # portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
 msgid "An type and activation code is required"
@@ -103,6 +138,10 @@ msgstr "Verjaardag"
 # pf::person::FIELDS
 msgid "Apartment_number"
 msgstr "Appartement/Flatnummer"
+
+# html/captive-portal/templates/status.html
+msgid "Bandwidth balance "
+msgstr ""
 
 # html/captive-portal/templates/activation/sponsor_login.html
 msgid "Before we proceed with guest activation, we need you to authenticate."
@@ -125,6 +164,11 @@ msgstr "Geboortedag"
 msgid "Building_number"
 msgstr "Nummer gebouw"
 
+# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/menu.html
+msgid "Cancel"
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Cell_phone"
 msgstr "GSM nummer"
@@ -137,6 +181,14 @@ msgstr "GSM nummer"
 msgid "Certificate generation for EAP TLS connection"
 msgstr ""
 
+# html/captive-portal/templates/status.html
+msgid "Change my password"
+msgstr ""
+
+# html/captive-portal/templates/status/reset_password.html
+msgid "Change your password"
+msgstr ""
+
 # html/captive-portal/templates/saml.html
 msgid "Click here to login on %s"
 msgstr "Klik hier om in te loggen %s"
@@ -145,11 +197,20 @@ msgstr "Klik hier om in te loggen %s"
 msgid "Company"
 msgstr "Bedrijf"
 
+# html/captive-portal/templates/status.html
+msgid "Computer name "
+msgstr ""
+
 # html/captive-
 # portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/SMS.pm
 msgid "Confirm Mobile Phone Number"
 msgstr "Bevestig mobiel telefoonnummer"
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "Confirm your password"
+msgstr ""
+
+# html/captive-portal/templates/billing/confirm_Stripe.html
 # html/captive-portal/templates/challenge.html
 # html/captive-portal/templates/message.html
 # html/captive-portal/templates/provisioner/accept.html
@@ -160,6 +221,7 @@ msgstr "Bevestig mobiel telefoonnummer"
 # html/captive-portal/templates/provisioner/opswat.html
 # html/captive-portal/templates/provisioner/sentinelone.html
 # html/captive-portal/templates/provisioner/sepm.html
+# html/captive-portal/templates/provisioner/servicenow.html
 # html/captive-portal/templates/provisioner/symantec.html
 # html/captive-portal/templates/provisioner/windows.html
 # html/captive-portal/templates/signin.html
@@ -214,6 +276,14 @@ msgstr ""
 
 # pf::person::FIELDS
 msgid "Custom_field_9"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
+msgid "Date Of Birth"
+msgstr ""
+
+# html/captive-portal/templates/status.html
+msgid "Declare as lost or stolen"
 msgstr ""
 
 # html/captive-portal/templates/billing/tier.html
@@ -295,6 +365,7 @@ msgstr "Als U dit niet binnen %s minuten doet zal je netwerk toegang verbroken w
 msgid "Firstname"
 msgstr "Voornaam"
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # pf::person::FIELDS
 msgid "Gender"
 msgstr "Geslacht (antwoord Neen)"
@@ -355,14 +426,16 @@ msgid "Hostname"
 msgstr "Computernaam"
 
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Widget/Field/AUP.pm
-# html/captive-portal/templates/device-registration/login.html
-# html/captive-portal/templates/status.html
 msgid "I accept the terms"
 msgstr "Ik accepteer de voorwaarden"
 
 # html/captive-portal/templates/sms/validate.html
 msgid "I don't have a PIN"
 msgstr "Ik heb geen pin code"
+
+# lib/pf/web.pm
+msgid "IP"
+msgstr ""
 
 # html/captive-portal/templates/provisioner/mobileiron.html
 msgid "If you are using a Windows phone"
@@ -393,6 +466,7 @@ msgid ""
 msgstr "Als je veragen heb over het registratieproces, neem dan contact op met je lokale ICT ondersteuningsdienst."
 
 # html/captive-portal/templates/release.html
+# html/captive-portal/templates/scan-in-progress.html
 # html/captive-portal/templates/scan.html
 # html/captive-portal/templates/waiting.html
 msgid ""
@@ -448,37 +522,29 @@ msgstr "Lang"
 msgid "Lastname"
 msgstr "Achternaam"
 
-# html/captive-
-# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 # html/captive-portal/templates/activation/sponsor_login.html
-# html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/oauth2/landing.html
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
 msgid "Login"
 msgstr "Log in. "
 
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
 msgid "Login to manage registered devices"
 msgstr "Inloggen om de geregistreerde toestellen te beheren"
 
-# html/captive-portal/templates/device-registration/registration.html
 # html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/menu.html
 msgid "Logout"
 msgstr "Uitloggen"
 
+# html/captive-portal/templates/status.html
 # lib/pf/web.pm
 msgid "MAC"
 msgstr "MAC"
 
 # html/captive-portal/templates/emails/emails-violation-triggered.html
-# html/captive-portal/templates/status.html
 msgid "MAC Address"
 msgstr "Mac Adres"
-
-# html/captive-portal/templates/device-registration/landing.html
-# html/captive-portal/templates/device-registration/registration.html
-msgid "Manage registered devices"
-msgstr "Geregistreerde toestellen beheren"
 
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 msgid "Mobile provider"
@@ -489,7 +555,7 @@ msgid "Network access activation"
 msgstr "Activatie netwerk toegang"
 
 # html/captive-portal/templates/release.html
-# html/captive-portal/templates/waiting.html
+# html/captive-portal/templates/scan-in-progress.html
 msgid "Network access has been granted"
 msgstr "De netwerktoegang werd verleend"
 
@@ -519,8 +585,8 @@ msgid "OS"
 msgstr "OS"
 
 # html/captive-portal/templates/status.html
-msgid "OS Type"
-msgstr "OS Type"
+msgid "OS Type "
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-
 # guest_email_preregistration_confirmed.html
@@ -550,6 +616,12 @@ msgid ""
 "connection"
 msgstr "Eenmaal de applicatie is geinstalleerd, druk dan volgend om uw netwerkverbinding te activeren"
 
+# html/captive-portal/templates/provisioner/servicenow.html
+msgid ""
+"Once the verification is done, click 'Continue' to activate your network "
+"connection"
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid ""
 "Once you click on the activation link the guest will be sent a username and "
@@ -569,6 +641,10 @@ msgid ""
 "our captive portal"
 msgstr "Eenmal aangekomen in onze gebouwen, gebruik dan volgende gebruikersnaam en wachtwoord voor ons gastportaal."
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "One of the password fields hasn't been filled"
+msgstr ""
+
 # html/captive-portal/templates/sms/validate.html
 msgid "PIN"
 msgstr "PIN"
@@ -580,7 +656,6 @@ msgstr "PacketFence Registratiesysteem"
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/activation/sponsor_login.html
-# html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/emails/emails-guest_admin_pregistration.html
 # html/captive-portal/templates/emails/emails-
 # guest_email_preregistration_confirmed.html
@@ -591,7 +666,8 @@ msgstr "PacketFence Registratiesysteem"
 # html/captive-portal/templates/pki_provider/packetfence_local.html
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
 # html/captive-portal/templates/pki_provider/scep.html
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
+# html/captive-portal/templates/status/reset_password.html
 msgid "Password"
 msgstr "Wachtwoord"
 
@@ -613,11 +689,6 @@ msgstr ""
 msgid "Please ignore this request if you have not requested network access."
 msgstr "Gelieve met deze aanvraag geen rekening te houden als je geen netwektoegang hebt aangevraagd."
 
-# html/captive-
-# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
-msgid "Please verify the provided MAC address."
-msgstr "Gelieve het gegeven MAC adres te verifiëren."
-
 # pf::person::FIELDS
 msgid "Portal"
 msgstr "Portaal"
@@ -636,26 +707,28 @@ msgstr "Voorregistratie"
 msgid "Price"
 msgstr "Prijs"
 
+# html/captive-portal/templates/status.html
+msgid ""
+"Really unregister %s? The device will be immediately disconnected from the "
+"network."
+msgstr ""
+
 # html/captive-portal/templates/device-registration/registration.html
 msgid "Register"
 msgstr "Registreer"
 
 # html/captive-portal/templates/status.html
-msgid "Register a device"
-msgstr "Registreer een toestel"
-
-# html/captive-portal/templates/device-registration/landing.html
 msgid "Register another device"
 msgstr "Registreer nog een toestel"
+
+# html/captive-portal/templates/status.html
+msgid "Registered on"
+msgstr ""
 
 # html/captive-
 # portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 msgid "Registration"
 msgstr "Registratie"
-
-# html/captive-portal/templates/status.html
-msgid "Registration Date"
-msgstr "Registratiedatum"
 
 # html/captive-portal/templates/waiting.html
 msgid "Registration pending"
@@ -668,6 +741,11 @@ msgstr "Terug naar Af"
 # html/captive-portal/templates/layout.html
 msgid "Restart registration process"
 msgstr "Herstart het registratie-proces"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid "Role %s has been assigned to your device"
+msgstr ""
 
 # pf::person::FIELDS
 msgid "Room_number"
@@ -686,14 +764,6 @@ msgstr "Kies console"
 msgid "Select an authentication method"
 msgstr "Kies een authenticatiemethode"
 
-# html/captive-portal/templates/release.html
-# html/captive-portal/templates/scan-in-progress.html
-# html/captive-portal/templates/waiting.html
-msgid ""
-"Some versions of Internet Explorer may take a while before redirection "
-"occur."
-msgstr "Bij sommige versies van Internet Explorer kan het even duren voordat u wordt doorgestuurd. "
-
 # pf::person::FIELDS
 msgid "Source"
 msgstr "Bron"
@@ -711,13 +781,21 @@ msgstr "Sponsor email"
 msgid "Sponsor request accepted"
 msgstr "Aanvraag via sponsor aanvaard"
 
-# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
-msgid "State - Network Access"
-msgstr "Status netwerktoegang"
-
 # html/captive-portal/templates/emails/emails-billing_confirmation.html
 msgid "Status"
 msgstr "Status"
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "Status - Login"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "Status - Manage Account"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "Status - Network Access"
+msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # pf::person::FIELDS
@@ -744,6 +822,11 @@ msgid ""
 " it was already used or has expired."
 msgstr "De gegeven activatiecode is ongeldig. Mogelijke redenen: foute code, deze code werd reeds gebruikt, deze code is vervallen."
 
+# html/captive-portal/templates/status.html
+msgid ""
+"The device %s will be disconnected and won't be able to be registered again."
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-
 # billing_stripe_customer.subscription.deleted.html
 msgid "The network access of device %s has been revoked."
@@ -753,9 +836,17 @@ msgstr "De netwerktoegang voor toestel %swerd opgezegd."
 msgid "The system is in maintenance mode"
 msgstr "Er zijn momenteel onderhoudswerken aan het systeem"
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "The two entered passwords did not match"
+msgstr ""
+
 # html/captive-portal/templates/account.html
 msgid "This account can only be used once."
 msgstr "Deze rekening kan slechts éénmaal gebruikt worden."
+
+# html/captive-portal/templates/status.html
+msgid "This device is declared as lost or stolen."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-billing_confirmation.html
 # html/captive-portal/templates/emails/emails-guest_email_preregistration.html
@@ -766,6 +857,10 @@ msgstr "Deze rekening kan slechts éénmaal gebruikt worden."
 # html/captive-portal/templates/emails/emails-violation-triggered.html
 msgid "This is a post only E-mail, please do not reply."
 msgstr "Gelieve op deze email niet te antwoorden, dit afzenderadres kan enkel verzenden, niet ontvangen."
+
+# html/captive-portal/templates/status.html
+msgid "This is your current device."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_admin_pregistration.html
 msgid "This username and password will be valid starting"
@@ -780,9 +875,19 @@ msgstr "Niveau"
 msgid "Tier confirmation"
 msgstr ""
 
+# html/captive-portal/templates/status.html
+msgid "Time balance "
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Title"
 msgstr "Titel"
+
+# html/captive-portal/templates/provisioner/servicenow.html
+msgid ""
+"To complete your network activation we need to verify this is a corporate "
+"computer."
+msgstr ""
 
 # html/captive-portal/templates/provisioner/mobileiron.html
 msgid "To complete your network activation you need to install MobileIron"
@@ -869,7 +974,6 @@ msgstr ""
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/activation/sponsor_login.html
-# html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/emails/emails-guest_admin_pregistration.html
 # html/captive-portal/templates/emails/emails-
 # guest_email_preregistration_confirmed.html
@@ -877,7 +981,7 @@ msgstr ""
 # guest_local_account_creation.html
 # html/captive-portal/templates/emails/emails-
 # guest_sponsor_preregistration.html
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
 msgid "Username"
 msgstr "Gebruikersnaam"
 
@@ -899,6 +1003,12 @@ msgstr "Telefoon werk"
 msgid "You can also modify the password below."
 msgstr "Je kan ook het paswoord hieronder wijzigen."
 
+# html/captive-portal/templates/lost_stolen.html
+msgid ""
+"You do not own this device %s, therefor you can not declare it as lost or "
+"stolen."
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-violation-triggered.html
 msgid "You have been detected doing malicious activity on the network."
 msgstr "Wij hebben kwaadaardig gedrag vastgesteld vanuit uw toestel."
@@ -917,10 +1027,6 @@ msgid ""
 "id='timeleft'>%s</strong>"
 msgstr "Je bent niet verbonden met het netwerk, maar je hebt een tijdskrediet van <strong id='timeleft'>%s</strong>"
 
-# html/captive-portal/templates/status.html
-msgid "Your Network Access Status"
-msgstr "Status van uw netwerk toegang"
-
 # html/captive-portal/templates/provisioner/android.html
 # html/captive-portal/templates/provisioner/mobileconfig.html
 msgid ""
@@ -928,13 +1034,9 @@ msgid ""
 "Follow the link below in order to get access to the secure SSID."
 msgstr ""
 
-# html/captive-portal/templates/status.html
-msgid "Your current device is not registered on our network."
-msgstr "Uw huidig toestel is niet geregistreerd op ons netwerk."
-
-# html/captive-portal/templates/status.html
-msgid "Your device is registered to <strong>%s</strong>"
-msgstr "Het toestel is geregistreerd voor <strong>%s</strong>"
+# html/captive-portal/templates/lost_stolen.html
+msgid "Your device %s has been declared as lost or stolen."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_confirmed.html
 # html/captive-portal/templates/emails/emails-
@@ -965,6 +1067,10 @@ msgid ""
 " established you will be automatically redirected."
 msgstr "Uw netwerk toegang wordt op dit moment weer toegestaan. Zodra u toegang heeft wordt u automatisch doorgestuurd. "
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "Your password has been updated"
+msgstr ""
+
 # html/captive-portal/templates/status.html
 msgid "Your registered devices"
 msgstr "Uw geregistreerde toestellen"
@@ -979,6 +1085,10 @@ msgstr "Uw registratie wacht op goedkeuring. Eens goedgekeurd wordt je automatis
 # billing_stripe_customer.subscription.deleted.html
 msgid "Your subscribtion was cancelled."
 msgstr "Uw abonnement werd beëindigd."
+
+# lib/pf/web.pm
+msgid "automatically refresh"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "de_DE"
@@ -996,11 +1106,11 @@ msgstr ""
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # lib/pf/web/release.pm
 msgid "error: max re-enables reached"
-msgstr "error: maximum aantal re-enables bereikt"
+msgstr ""
 
 # lib/pf/web/release.pm
 msgid "error: not found in the database"
-msgstr "error: niet gevonden in de database"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "es_ES"
@@ -1020,7 +1130,7 @@ msgstr ""
 
 # html/captive-portal/templates/layout.html
 msgid "help: provide info"
-msgstr "help: geef meer informatie"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "it_IT"
@@ -1054,6 +1164,10 @@ msgstr ""
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "requested guest access to your network."
 msgstr "heeft gastttoegang op je netwerk gevraagd"
+
+# lib/pf/web.pm
+msgid "scan in progress contact support if too long"
+msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Remediation.pm
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
