--- a/conf/locale/pt_BR/LC_MESSAGES/packetfence.po
+++ b/conf/locale/pt_BR/LC_MESSAGES/packetfence.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-09-23 18:05+0000\n"
+"PO-Revision-Date: 2017-11-24 15:31+0000\n"
 "Last-Translator: inverse <info@inverse.ca>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/inverse/packetfence/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -25,6 +25,36 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with bandwidth balance : %s,"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with time balance : %s,"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid " with unregistration date : %s,"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Email.pm
+msgid "%s: Email activation required"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Sponsor.pm
+msgid "%s: Guest access request"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "%s: Guest access request accepted"
+msgstr ""
 
 # html/captive-portal/templates/pki_provider/packetfence_local.html
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
@@ -96,6 +126,11 @@ msgstr "Um e-mail com as informações de login seguirá nos próximos minutos."
 msgid "An error occured"
 msgstr "Um erro ocorreu."
 
+# html/captive-portal/templates/lost_stolen.html
+msgid ""
+"An error occured while trying to declare the device %s as lost or stolen."
+msgstr ""
+
 # html/captive-
 # portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
 msgid "An type and activation code is required"
@@ -108,6 +143,10 @@ msgstr "Aniversário"
 # pf::person::FIELDS
 msgid "Apartment_number"
 msgstr "Número do Apartamento"
+
+# html/captive-portal/templates/status.html
+msgid "Bandwidth balance "
+msgstr ""
 
 # html/captive-portal/templates/activation/sponsor_login.html
 msgid "Before we proceed with guest activation, we need you to authenticate."
@@ -130,6 +169,11 @@ msgstr "Dia do Nascimento"
 msgid "Building_number"
 msgstr "Numero do Build"
 
+# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/menu.html
+msgid "Cancel"
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Cell_phone"
 msgstr "Numero do Celular"
@@ -142,6 +186,14 @@ msgstr "Numero do Celular"
 msgid "Certificate generation for EAP TLS connection"
 msgstr "Geração de certificado para conexão EAP TLS"
 
+# html/captive-portal/templates/status.html
+msgid "Change my password"
+msgstr ""
+
+# html/captive-portal/templates/status/reset_password.html
+msgid "Change your password"
+msgstr ""
+
 # html/captive-portal/templates/saml.html
 msgid "Click here to login on %s"
 msgstr "Clique aqui para logar %s"
@@ -150,11 +202,20 @@ msgstr "Clique aqui para logar %s"
 msgid "Company"
 msgstr "Compania"
 
+# html/captive-portal/templates/status.html
+msgid "Computer name "
+msgstr ""
+
 # html/captive-
 # portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/SMS.pm
 msgid "Confirm Mobile Phone Number"
 msgstr "Confirmar Numero de Celular"
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "Confirm your password"
+msgstr ""
+
+# html/captive-portal/templates/billing/confirm_Stripe.html
 # html/captive-portal/templates/challenge.html
 # html/captive-portal/templates/message.html
 # html/captive-portal/templates/provisioner/accept.html
@@ -165,6 +226,7 @@ msgstr "Confirmar Numero de Celular"
 # html/captive-portal/templates/provisioner/opswat.html
 # html/captive-portal/templates/provisioner/sentinelone.html
 # html/captive-portal/templates/provisioner/sepm.html
+# html/captive-portal/templates/provisioner/servicenow.html
 # html/captive-portal/templates/provisioner/symantec.html
 # html/captive-portal/templates/provisioner/windows.html
 # html/captive-portal/templates/signin.html
@@ -220,6 +282,14 @@ msgstr "Campo_customizável_8"
 # pf::person::FIELDS
 msgid "Custom_field_9"
 msgstr "Campo_customizável_9"
+
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
+msgid "Date Of Birth"
+msgstr ""
+
+# html/captive-portal/templates/status.html
+msgid "Declare as lost or stolen"
+msgstr ""
 
 # html/captive-portal/templates/billing/tier.html
 msgid "Description"
@@ -300,6 +370,7 @@ msgstr "Falha na tentativa de conectar dentro de %s minutos resultará em um enc
 msgid "Firstname"
 msgstr "Nome"
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # pf::person::FIELDS
 msgid "Gender"
 msgstr "Gênero"
@@ -360,14 +431,16 @@ msgid "Hostname"
 msgstr "Nome do Host"
 
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Widget/Field/AUP.pm
-# html/captive-portal/templates/device-registration/login.html
-# html/captive-portal/templates/status.html
 msgid "I accept the terms"
 msgstr "Eu aceito os termos"
 
 # html/captive-portal/templates/sms/validate.html
 msgid "I don't have a PIN"
 msgstr "Eu não tenho um PIN"
+
+# lib/pf/web.pm
+msgid "IP"
+msgstr ""
 
 # html/captive-portal/templates/provisioner/mobileiron.html
 msgid "If you are using a Windows phone"
@@ -398,6 +471,7 @@ msgid ""
 msgstr "Em caso de dúvidas sobre o processo de registro, entre em contato com a equipe de suporte local."
 
 # html/captive-portal/templates/release.html
+# html/captive-portal/templates/scan-in-progress.html
 # html/captive-portal/templates/scan.html
 # html/captive-portal/templates/waiting.html
 msgid ""
@@ -453,37 +527,29 @@ msgstr "Linguagem"
 msgid "Lastname"
 msgstr "Sobrenome"
 
-# html/captive-
-# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 # html/captive-portal/templates/activation/sponsor_login.html
-# html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/oauth2/landing.html
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
 msgid "Login"
 msgstr "Usuário"
 
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
 msgid "Login to manage registered devices"
 msgstr "Conecte-se para gerenciar dispositivos registrados"
 
-# html/captive-portal/templates/device-registration/registration.html
 # html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/menu.html
 msgid "Logout"
 msgstr "Sair"
 
+# html/captive-portal/templates/status.html
 # lib/pf/web.pm
 msgid "MAC"
 msgstr "MAC"
 
 # html/captive-portal/templates/emails/emails-violation-triggered.html
-# html/captive-portal/templates/status.html
 msgid "MAC Address"
 msgstr "Endereço MAC"
-
-# html/captive-portal/templates/device-registration/landing.html
-# html/captive-portal/templates/device-registration/registration.html
-msgid "Manage registered devices"
-msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 msgid "Mobile provider"
@@ -494,7 +560,7 @@ msgid "Network access activation"
 msgstr "Ativação de acesso à rede."
 
 # html/captive-portal/templates/release.html
-# html/captive-portal/templates/waiting.html
+# html/captive-portal/templates/scan-in-progress.html
 msgid "Network access has been granted"
 msgstr "O acesso à rede foi concedido"
 
@@ -524,8 +590,8 @@ msgid "OS"
 msgstr "S.O."
 
 # html/captive-portal/templates/status.html
-msgid "OS Type"
-msgstr "Tipo de SO"
+msgid "OS Type "
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-
 # guest_email_preregistration_confirmed.html
@@ -555,6 +621,12 @@ msgid ""
 "connection"
 msgstr "Uma vez que a aplicação está instalada, clique em próximo para ativar sua conexão a rede"
 
+# html/captive-portal/templates/provisioner/servicenow.html
+msgid ""
+"Once the verification is done, click 'Continue' to activate your network "
+"connection"
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid ""
 "Once you click on the activation link the guest will be sent a username and "
@@ -574,6 +646,10 @@ msgid ""
 "our captive portal"
 msgstr "Autentique-se usando as seguintes credenciais no nosso Portal de acesso."
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "One of the password fields hasn't been filled"
+msgstr ""
+
 # html/captive-portal/templates/sms/validate.html
 msgid "PIN"
 msgstr "PIN"
@@ -585,7 +661,6 @@ msgstr "Sistema de Registro PacketFence"
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/activation/sponsor_login.html
-# html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/emails/emails-guest_admin_pregistration.html
 # html/captive-portal/templates/emails/emails-
 # guest_email_preregistration_confirmed.html
@@ -596,7 +671,8 @@ msgstr "Sistema de Registro PacketFence"
 # html/captive-portal/templates/pki_provider/packetfence_local.html
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
 # html/captive-portal/templates/pki_provider/scep.html
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
+# html/captive-portal/templates/status/reset_password.html
 msgid "Password"
 msgstr "Senha"
 
@@ -618,11 +694,6 @@ msgstr "Pid"
 msgid "Please ignore this request if you have not requested network access."
 msgstr "Favor ignorar caso não tenha solicitado acesso a rede."
 
-# html/captive-
-# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
-msgid "Please verify the provided MAC address."
-msgstr ""
-
 # pf::person::FIELDS
 msgid "Portal"
 msgstr "Portal"
@@ -641,26 +712,28 @@ msgstr "Pré-Registro"
 msgid "Price"
 msgstr "Preço"
 
+# html/captive-portal/templates/status.html
+msgid ""
+"Really unregister %s? The device will be immediately disconnected from the "
+"network."
+msgstr ""
+
 # html/captive-portal/templates/device-registration/registration.html
 msgid "Register"
 msgstr "Registrar"
 
 # html/captive-portal/templates/status.html
-msgid "Register a device"
-msgstr ""
-
-# html/captive-portal/templates/device-registration/landing.html
 msgid "Register another device"
 msgstr "Registro de um novo dispositivo."
+
+# html/captive-portal/templates/status.html
+msgid "Registered on"
+msgstr ""
 
 # html/captive-
 # portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 msgid "Registration"
 msgstr "Cadastro"
-
-# html/captive-portal/templates/status.html
-msgid "Registration Date"
-msgstr "Data de Registro"
 
 # html/captive-portal/templates/waiting.html
 msgid "Registration pending"
@@ -673,6 +746,11 @@ msgstr "Favor tentar novamente."
 # html/captive-portal/templates/layout.html
 msgid "Restart registration process"
 msgstr "Reiniciando processo de cadastro."
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid "Role %s has been assigned to your device"
+msgstr ""
 
 # pf::person::FIELDS
 msgid "Room_number"
@@ -691,14 +769,6 @@ msgstr "Selecionar Console"
 msgid "Select an authentication method"
 msgstr "Selecionar um método de autenticação"
 
-# html/captive-portal/templates/release.html
-# html/captive-portal/templates/scan-in-progress.html
-# html/captive-portal/templates/waiting.html
-msgid ""
-"Some versions of Internet Explorer may take a while before redirection "
-"occur."
-msgstr "Algumas versões do Internet Explorer pode demorar um pouco antes de ocorrer o redirecionamento."
-
 # pf::person::FIELDS
 msgid "Source"
 msgstr "Fonte"
@@ -716,13 +786,21 @@ msgstr "E-mail do Patrocinador"
 msgid "Sponsor request accepted"
 msgstr "Solicitação aceita pelo Patrocinador"
 
-# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
-msgid "State - Network Access"
-msgstr "Acesso a Rede - Status"
-
 # html/captive-portal/templates/emails/emails-billing_confirmation.html
 msgid "Status"
 msgstr "Status"
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "Status - Login"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "Status - Manage Account"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "Status - Network Access"
+msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # pf::person::FIELDS
@@ -749,6 +827,11 @@ msgid ""
 " it was already used or has expired."
 msgstr ""
 
+# html/captive-portal/templates/status.html
+msgid ""
+"The device %s will be disconnected and won't be able to be registered again."
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-
 # billing_stripe_customer.subscription.deleted.html
 msgid "The network access of device %s has been revoked."
@@ -758,9 +841,17 @@ msgstr "O acesso a rede do dispositivo %s foi revogada."
 msgid "The system is in maintenance mode"
 msgstr "Sistema está em manutenção"
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "The two entered passwords did not match"
+msgstr ""
+
 # html/captive-portal/templates/account.html
 msgid "This account can only be used once."
 msgstr "Esta conta só pode ser utilizada uma vez."
+
+# html/captive-portal/templates/status.html
+msgid "This device is declared as lost or stolen."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-billing_confirmation.html
 # html/captive-portal/templates/emails/emails-guest_email_preregistration.html
@@ -771,6 +862,10 @@ msgstr "Esta conta só pode ser utilizada uma vez."
 # html/captive-portal/templates/emails/emails-violation-triggered.html
 msgid "This is a post only E-mail, please do not reply."
 msgstr "Este é apenas um e-mail de postagem, por favor, não responda."
+
+# html/captive-portal/templates/status.html
+msgid "This is your current device."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_admin_pregistration.html
 msgid "This username and password will be valid starting"
@@ -785,9 +880,19 @@ msgstr "Nivel"
 msgid "Tier confirmation"
 msgstr "Confirmação de nível"
 
+# html/captive-portal/templates/status.html
+msgid "Time balance "
+msgstr ""
+
 # pf::person::FIELDS
 msgid "Title"
 msgstr "Titulo"
+
+# html/captive-portal/templates/provisioner/servicenow.html
+msgid ""
+"To complete your network activation we need to verify this is a corporate "
+"computer."
+msgstr ""
 
 # html/captive-portal/templates/provisioner/mobileiron.html
 msgid "To complete your network activation you need to install MobileIron"
@@ -874,7 +979,6 @@ msgstr "Conta de Usuário"
 # html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/activation/sponsor_login.html
-# html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/emails/emails-guest_admin_pregistration.html
 # html/captive-portal/templates/emails/emails-
 # guest_email_preregistration_confirmed.html
@@ -882,7 +986,7 @@ msgstr "Conta de Usuário"
 # guest_local_account_creation.html
 # html/captive-portal/templates/emails/emails-
 # guest_sponsor_preregistration.html
-# html/captive-portal/templates/status.html
+# html/captive-portal/templates/status/login.html
 msgid "Username"
 msgstr "Nome de Usuário"
 
@@ -904,6 +1008,12 @@ msgstr "Telefone do Trabalho"
 msgid "You can also modify the password below."
 msgstr "Você também poderá modificar sua senha abaixo."
 
+# html/captive-portal/templates/lost_stolen.html
+msgid ""
+"You do not own this device %s, therefor you can not declare it as lost or "
+"stolen."
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-violation-triggered.html
 msgid "You have been detected doing malicious activity on the network."
 msgstr "Foi detectado uma atividade mal-intencionada na rede pelo dispositivo."
@@ -922,10 +1032,6 @@ msgid ""
 "id='timeleft'>%s</strong>"
 msgstr "Você está conectado à rede, mas possui uma reserva de tempo de <strong id='timeleft'>%s</strong>"
 
-# html/captive-portal/templates/status.html
-msgid "Your Network Access Status"
-msgstr "Seus status de acesso à rede"
-
 # html/captive-portal/templates/provisioner/android.html
 # html/captive-portal/templates/provisioner/mobileconfig.html
 msgid ""
@@ -933,13 +1039,9 @@ msgid ""
 "Follow the link below in order to get access to the secure SSID."
 msgstr "Sua configuração XML foi gerada e está pronto para download. Siga o link abaixo para ter acesso ao SSID seguro."
 
-# html/captive-portal/templates/status.html
-msgid "Your current device is not registered on our network."
-msgstr "Seu dispositivo atual não está registrado em nossa rede."
-
-# html/captive-portal/templates/status.html
-msgid "Your device is registered to <strong>%s</strong>"
-msgstr "Seu dispositivo está registrado em <strong>%s</strong>"
+# html/captive-portal/templates/lost_stolen.html
+msgid "Your device %s has been declared as lost or stolen."
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_confirmed.html
 # html/captive-portal/templates/emails/emails-
@@ -970,6 +1072,10 @@ msgid ""
 " established you will be automatically redirected."
 msgstr "Aguarde, seu acesso à rede está sendo ativado."
 
+# html/captive-portal/templates/status/reset_password.html
+msgid "Your password has been updated"
+msgstr ""
+
 # html/captive-portal/templates/status.html
 msgid "Your registered devices"
 msgstr "Seus dispositivos registrados"
@@ -984,6 +1090,10 @@ msgstr "O seu registro está pendente de aprovação. Uma vez aprovado, o usuár
 # billing_stripe_customer.subscription.deleted.html
 msgid "Your subscribtion was cancelled."
 msgstr "Sua inscrição foi cancelada."
+
+# lib/pf/web.pm
+msgid "automatically refresh"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "de_DE"
@@ -1013,7 +1123,7 @@ msgstr ""
 
 # pf::web::constants (Locales)
 msgid "fr_CA"
-msgstr "fr_CA"
+msgstr ""
 
 # pf::web::constants (Locales)
 msgid "fr_FR"
@@ -1059,6 +1169,10 @@ msgstr ""
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "requested guest access to your network."
 msgstr "Solicitando acesso de convidado a rede."
+
+# lib/pf/web.pm
+msgid "scan in progress contact support if too long"
+msgstr ""
 
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Remediation.pm
 # html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
